--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,7 +59,8 @@ jobs:
       pull-requests: write
     steps:
       - name: Check target branch artifact
-        id: check
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           ARTIFACT_NAME="code-coverage"
 
