--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,7 +67,15 @@ jobs:
         run: |
           ARTIFACT_NAME="code-coverage"
 
-          RUN_ID=$(gh run list --status=success --branch=${{ github.event.pull_request.base.ref }} --workflow=update-coverage.yaml --json=databaseId --limit=1 -q '.[0].databaseId')
+          RUN_ID=$(
+            gh run list \
+              --status=success \
+              --branch="${{ github.event.pull_request.base.ref }}" \
+              --workflow=update-coverage.yaml \
+              --json=databaseId \
+              --limit=1 \
+              -q '.[0].databaseId' 2>/dev/null || true
+          )
 
           if [ -z "$RUN_ID" ]; then
             echo "❌ No coverage found on branch: ${{ github.event.pull_request.base.ref }}"
