--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,7 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Check target branch artifact
+        id: check_artifact
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -79,6 +80,7 @@ jobs:
 
           if [ -z "$RUN_ID" ]; then
             echo "❌ No coverage found on branch: ${{ github.event.pull_request.base.ref }}"
+            echo "exists=false" >> "$GITHUB_OUTPUT"
             exit 0
           else
             echo "✅ Found run ID: $RUN_ID"
@@ -88,12 +90,14 @@ jobs:
 
           if [ -n "$EXISTS" ]; then
             echo "✅ Artifact '$ARTIFACT_NAME' exists"
+            echo "exists=true" >> "$GITHUB_OUTPUT"
           else
             echo "❌ Artifact '$ARTIFACT_NAME' not found"
-            exit 0
+            echo "exists=false" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Generate coverage report
+        if: steps.check_artifact.outputs.exists == 'true'
         uses: fgrosse/go-coverage-report@v1.2.0
 
   build:
