Fix update trigger on wrong branch

--- a/.github/workflows/update-coverage.yaml
+++ b/.github/workflows/update-coverage.yaml
@@ -1,11 +1,9 @@
 name: Update Coverage
 
 on:
-  pull_request:
+  push:
     branches:
       - main
-    types:
-      - closed
 
 jobs:
   upload:
